force-app/main/default/objects/objects/LLM_Message__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <description>Short code such as AUTH, RATE_LIMIT, QUOTA, TIMEOUT, MODEL_UNAVAILABLE.</description>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>