force-app/main/default/objects/objects/LLM_Message__c/fields/Model__c.field-meta.xml
<CustomField>
    <description>Model that produced this message (assistant messages).</description>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>