force-app/main/default/objects/objects/LLM_Message__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <description>Order within the conversation. CreatedDate only has second precision, so it can tie.</description>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>